Fix content disappearing on smaller screensizes

--- a/style.scss
+++ b/style.scss
@@ -3043,7 +3043,7 @@ blockquote p,
 
 .art-content-layout .art-content {
     margin: 0 auto;
-    flex: 1;
+    flex: 1 1 auto;
     min-width: 0;
 }
 
